pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-volume-types
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
