pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-volume-types-binding
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-volume-types
spec:
  policyName: restrict-volume-types
  validationActions: [Deny]
