pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/vap-assert.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  name: restrict-volume-types
  ownerReferences:
  - apiVersion: kyverno.io/v1
    kind: ClusterPolicy
    name: restrict-volume-types
spec:
  failurePolicy: Fail
